[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.44"
clap = { version = "4.4.10", features = ["derive"] }
seq-macro = "0.3.5"

# [build-dependencies]
# ureq = "2.9.1"
# time = "0.3.30"
# serde = { version = "1.0.193", features = ["derive"] }
# serde_json = "1.0.108"
# anyhow = "1.0.44"
