[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
anyhow = "1.0.44"
bit-set = "0.5.3"
bit-vec = "0.6.3"
clap = { version = "4.4.10", features = ["derive"] }
fxhash = "0.2.1"
seq-macro = "0.3.5"
smallvec = "1.11.2"
tap = "1.0.1"
